# modules/sys/router/sys_member.go
@@ -1,8 +1,9 @@
 package router
 
 import (
-	"dilu/modules/sys/apis"
 	"dilu/common/middleware"
+	"dilu/modules/sys/apis"
+
 	"github.com/gin-gonic/gin"
 )
 
@@ -19,5 +20,7 @@ func registerSysMemberRouter(v1 *gin.RouterGroup) {
 		r.POST("/update", apis.ApiSysMember.Update)
 		r.POST("/page", apis.ApiSysMember.QueryPage)
 		r.POST("/del", apis.ApiSysMember.Del)
+		r.POST("myTeams", apis.ApiSysMember.MyTeams)
+		r.POST("myInfo", apis.ApiSysMember.MyInfo)
 	}
 }
